# ink-knowledge

./: .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  components.json  package.json  pnpm-lock.yaml  pyproject.toml  tailwind.config.ts  tsconfig.json  uno.config.ts  vite.config.ts
apple-vision/: AppleVisionOCR.swift
docs/: architecture.md  desktop-ui-design-system.md  native-backend-extension-refactor.md  toolbox-roadmap.md  update-system.md
macos-capture/: MoshiCaptureHelper.swift  MoshiPasteboardReader.swift
release/: config.json  release-notes.md
scripts/: build_apple_vision_helper.sh  build_macos_capture_helper.sh  build_paddle_extension.sh  build_pasteboard_reader.sh  generate_samples.py  install_backend.sh  prepare_release.mjs  setup_dev.sh  smoke.sh  smoke_macos_capture_helper.sh  verify_desktop_release.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  update-links.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_window.rs  backend.rs  clipboard.rs  clipboard_repo.rs  clipboard_window.rs  color_picker.rs  commands.rs  extensions.rs  floating_window.rs  main.rs  native_capture.rs  native_pasteboard.rs  ocr_result_window.rs  paths.rs  screenshot.rs  screenshot_ocr.rs  settings_repo.rs  shortcuts.rs  storage.rs  translation.rs  translation_window.rs  tray.rs  update.rs
src/mac_local_ocr/: __init__.py  backends.py  cli.py  document.py  models.py  samples.py
tests/: test_backends.py  test_models.py
ui/: index.html
ui/src/: App.tsx  main.tsx  styles.scss  types.ts
ui/src/components/ui/: AppButton.tsx  AppSelect.tsx  (+12 more)
ui/src/data/: changelog.json
ui/src/lib/: format.ts  ocrEngines.ts  ocrLanguages.ts  settings.ts  theme.ts  translation.ts  update.ts
(+25 files in other folders)
