[project]
name = "mac-local-ocr"
version = "0.1.0"
description = "墨识 OCR: local OCR CLI for macOS using PaddleOCR and PyMuPDF."
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "pymupdf>=1.24.0",
    "pillow>=10.0.0",
]

[project.optional-dependencies]
paddle = [
    "paddleocr>=3.0.0",
]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
mac-local-ocr = "mac_local_ocr.cli:main"
mac-local-ocr-samples = "mac_local_ocr.samples:main"
mac-ocr = "mac_local_ocr.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/mac_local_ocr"]
